Fix down arrow overlapping text in select

--- a/src/components/form/select/select.scss
+++ b/src/components/form/select/select.scss
@@ -17,7 +17,7 @@
     & select {
       @include mixins.form-component;
       cursor: pointer;
-      padding-right: spacing.$space-50;
+      padding-right: spacing.$space-50 !important;
     }
 
     &:after {
